fix alignment

--- a/firstpage.css
+++ b/firstpage.css
@@ -69,6 +69,22 @@ body {
   padding-left: 5px;
   margin-left: 12px;
 }
+.user_pass_confirm {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  text-align: right;
+  position: relative;
+  left: -55;
+}
+.email {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  text-align: right;
+  position: relative;
+  left: 25;
+}
 .submit {
   display: flex;
   justify-content: center;
